--- a/app/src/main/res/layout/dialog_zip_file_detail.xml
+++ b/app/src/main/res/layout/dialog_zip_file_detail.xml
@@ -24,8 +24,8 @@
         android:layout_marginStart="24dp"
         android:layout_marginTop="14dp"
         android:gravity="center_vertical"
-        android:text="View"
-        android:textColor="#ff39bdac"
+        android:text="@string/view"
+        android:textColor="@color/green_text_color_selector"
         android:textSize="16dp"/>
 
     <TextView
@@ -35,8 +35,8 @@
         android:layout_marginLeft="24dp"
         android:layout_marginStart="24dp"
         android:gravity="center_vertical"
-        android:text="Extract"
-        android:textColor="#ff39bdac"
+        android:text="@string/extract"
+        android:textColor="@color/green_text_color_selector"
         android:textSize="16dp"/>
 
     <TextView
@@ -46,7 +46,7 @@
         android:layout_marginLeft="24dp"
         android:layout_marginStart="24dp"
         android:gravity="center_vertical"
-        android:text="Cancel"
-        android:textColor="#ff39bdac"
+        android:text="@string/common_cancel"
+        android:textColor="@color/green_text_color_selector"
         android:textSize="16dp"/>
 </LinearLayout>
