--- a/app/src/main/res/layout/dialog_zip_pass_input.xml
+++ b/app/src/main/res/layout/dialog_zip_pass_input.xml
@@ -12,7 +12,7 @@
         android:layout_marginLeft="24dp"
         android:layout_marginStart="24dp"
         android:layout_marginTop="21dp"
-        android:text="Password Required"
+        android:text="@string/password_required"
         android:textColor="#b3000000"
         android:textSize="20dp"
         android:textStyle="bold"/>
@@ -29,7 +29,7 @@
         android:layout_marginTop="21dp"
         android:background="@drawable/red_2_dp_corner_bg"
         android:gravity="center_vertical"
-        android:text="Invalid Password"
+        android:text="@string/invalid_password"
         android:textColor="@android:color/white"
         android:textSize="12dp"
         android:visibility="gone"/>
@@ -43,7 +43,7 @@
         android:layout_marginRight="24dp"
         android:layout_marginStart="24dp"
         android:layout_marginTop="69dp"
-        android:text="This archive is encrypted.Enter password to access its content."
+        android:text="@string/enter_password_to_access"
         android:textColor="#b3000000"
         android:textSize="14dp"/>
 
@@ -57,7 +57,7 @@
         android:layout_marginStart="24dp"
         android:layout_marginTop="113dp"
         android:gravity="center_vertical"
-        android:hint="Enter password"
+        android:hint="@string/enter_password"
         android:inputType="textPassword"
         android:singleLine="true"
         android:textColor="#b3000000"/>
@@ -79,7 +79,7 @@
         android:layout_marginStart="50dp"
         android:layout_marginTop="161dp"
         android:drawablePadding="10dp"
-        android:text="Show password"
+        android:text="@string/show_password"
         android:textColor="#b3000000"
         android:textSize="12dp"/>
 
@@ -95,7 +95,7 @@
         android:layout_marginRight="8dp"
         android:gravity="center"
         android:text="@string/common_ok"
-        android:textColor="#398dac"
+        android:textColor="@color/green_text_color_selector"
         android:textSize="16dp"
         android:textStyle="bold"/>
 
@@ -111,7 +111,7 @@
         android:layout_marginRight="96dp"
         android:gravity="center"
         android:text="@string/common_cancel"
-        android:textColor="#b3000000"
+        android:textColor="@color/tv_back_black_text_selector"
         android:textSize="20dp"
         android:textStyle="bold"/>
 </RelativeLayout>
