--- a/app/src/main/res/layout/view_extract_progress.xml
+++ b/app/src/main/res/layout/view_extract_progress.xml
@@ -17,7 +17,7 @@
             android:layout_marginLeft="24dp"
             android:layout_marginStart="24dp"
             android:layout_marginTop="21dp"
-            android:text="Extracting..."
+            android:text="@string/extracting"
             android:textColor="@android:color/black"
             android:textSize="20dp"
             android:textStyle="bold"/>
@@ -49,8 +49,8 @@
             android:layout_marginRight="8dp"
             android:layout_marginTop="20dp"
             android:gravity="center"
-            android:text="Extract in background"
-            android:textColor="#39bdac"
+            android:text="@string/extract_in_background"
+            android:textColor="@color/green_text_color_selector"
             android:textSize="16dp"
             android:textStyle="bold"/>
 
@@ -64,7 +64,7 @@
             android:layout_marginRight="200dp"
             android:gravity="center"
             android:text="@string/common_cancel"
-            android:textColor="@color/black"
+            android:textColor="@color/tv_back_black_text_selector"
             android:textSize="16dp"
             android:textStyle="bold"/>
     </RelativeLayout>
