--- a/app/src/main/res/layout/activity_same_file.xml
+++ b/app/src/main/res/layout/activity_same_file.xml
@@ -21,6 +21,7 @@
             android:id="@+id/elv_music"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
+            android:background="@color/list_divider_line_color_f5f6ff"
             >
 
         </android.support.v7.widget.RecyclerView>
