--- a/app/src/main/res/layout/item_samefile_child.xml
+++ b/app/src/main/res/layout/item_samefile_child.xml
@@ -5,7 +5,8 @@
     android:id="@+id/ll_music_item_container"
     android:orientation="horizontal"
     android:layout_width="match_parent"
-    android:layout_height="60dp">
+    android:layout_height="60dp"
+    android:background="@color/white">
 
     <ImageView
         android:id="@+id/iv_music_child_item_cover"
@@ -13,43 +14,48 @@
         android:layout_height="36dp"
         android:layout_margin="16dp"
         android:layout_gravity="center_vertical"/>
-
     <LinearLayout
-        android:layout_width="0dp"
+        android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_weight="1"
-        android:orientation="vertical"
-        android:gravity="center_vertical">
+        android:orientation="horizontal"
+        android:background="@drawable/bg_item_main_storage_list_style">
+        <LinearLayout
+            android:layout_width="0dp"
+            android:layout_height="match_parent"
+            android:layout_weight="1"
+            android:orientation="vertical"
+            android:gravity="center_vertical">
 
-        <TextView
-            android:id="@+id/tv_music_child_item_name"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
+            <TextView
+                android:id="@+id/tv_music_child_item_name"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:gravity="center_vertical"
+                android:lines="1"
+                android:ellipsize="marquee"
+                android:textColor="#4f4b4c"
+                android:textSize="14dp" />
+
+            <TextView
+                android:id="@+id/tv_music_child_item_info"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:gravity="center_vertical"
+                android:lines="1"
+                android:textColor="#979797"
+                android:textSize="10dp" />
+
+        </LinearLayout>
+
+        <ImageView
+            android:id="@+id/iv_music_child_item_select"
+            android:layout_width="48dp"
+            android:layout_height="48dp"
+            android:layout_gravity="center"
             android:gravity="center_vertical"
-            android:lines="1"
-            android:ellipsize="marquee"
-            android:textColor="#4f4b4c"
-            android:textSize="14dp" />
-
-        <TextView
-            android:id="@+id/tv_music_child_item_info"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:gravity="center_vertical"
-            android:lines="1"
-            android:textColor="#979797"
-            android:textSize="10dp" />
-
+            android:padding="16dp"
+            android:src="@drawable/choose_none" />
     </LinearLayout>
-
-    <ImageView
-        android:id="@+id/iv_music_child_item_select"
-        android:layout_width="48dp"
-        android:layout_height="48dp"
-        android:layout_gravity="center"
-        android:gravity="center_vertical"
-        android:padding="16dp"
-        android:src="@drawable/choose_none" />
 
 
 </LinearLayout>
