--- a/app/src/main/res/layout/item_samefile_group.xml
+++ b/app/src/main/res/layout/item_samefile_group.xml
@@ -2,46 +2,31 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="81dp"
-    android:orientation="vertical"
-    android:background="@color/white" >
+    android:layout_height="40dp"
+    android:orientation="horizontal"
+    android:background="@drawable/bg_item_samefile_list_group_style"
+    tools:ignore="UseCompoundDrawables"
+    >
 
-    <LinearLayout
-        android:layout_width="match_parent"
+    <TextView
+        android:id="@+id/tv_music_group_item_title"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:layout_gravity="center_vertical"
+        android:layout_marginLeft="12dp"
+        android:layout_weight="1"
+        android:lines="1"
+        android:textColor="#999b98"
+        android:textSize="16sp" />
+
+    <ImageView
+        android:id="@+id/iv_music_group_item_select"
+        android:layout_width="40dp"
         android:layout_height="40dp"
-        android:orientation="horizontal"
-        tools:ignore="UseCompoundDrawables">
-
-        <TextView
-            android:id="@+id/tv_music_group_item_title"
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:layout_gravity="center_vertical"
-            android:padding="12dp"
-            android:layout_weight="1"
-            android:lines="1"
-            android:textColor="#999b98"
-            android:textSize="16sp" />
-
-        <ImageView
-            android:id="@+id/iv_music_group_item_select"
-            android:layout_width="40dp"
-            android:layout_height="40dp"
-            android:layout_marginEnd="4dp"
-            android:layout_marginRight="4dp"
-            android:gravity="center_vertical"
-            android:padding="12dp"
-            android:src="@drawable/choose_none"
-            tools:ignore="ContentDescription" />
-    </LinearLayout>
-
-    <!--<ImageView-->
-        <!--android:id="@+id/textView"-->
-        <!--android:layout_width="match_parent"-->
-        <!--android:layout_height="5dp"-->
-        <!--android:background="#f5f6ff"-->
-        <!--android:padding="0dp"-->
-        <!--android:layout_margin="0dp"-->
-        <!--tools:ignore="ContentDescription" />-->
-
+        android:layout_marginEnd="4dp"
+        android:layout_marginRight="4dp"
+        android:gravity="center_vertical"
+        android:padding="12dp"
+        android:src="@drawable/choose_none"
+        tools:ignore="ContentDescription" />
 </LinearLayout>
