--- a/app/src/main/res/layout/main_drawer.xml
+++ b/app/src/main/res/layout/main_drawer.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     tools:ignore="SpUsage,ContentDescription"
     android:id="@+id/left_drawer"
@@ -7,62 +7,240 @@
     android:layout_height="match_parent"
     android:clickable="true"
     android:background="@color/white"
-    android:paddingTop="@dimen/drawer_sv_margin_top_42dp"
+    android:paddingTop="50dp"
     android:orientation="vertical">
 
-    <android.support.v7.widget.RecyclerView
-        android:id="@+id/rv_for_drawer_item"
+    <LinearLayout
         android:layout_width="match_parent"
-        android:layout_weight="1"
-        android:paddingBottom="40dp"
-        android:layout_height="0dp"/>
+        android:layout_height="wrap_content"
+        android:orientation="vertical">
 
-    <RelativeLayout
-        android:id="@+id/rl_drawer_bottom"
-        android:layout_height="70dp"
-        android:layout_width="match_parent"
-        android:background="@drawable/img_drawer_bottom_bg_blue">
-
-        <ImageView
-            android:id="@+id/iv_drawer_setting"
-            android:layout_width="24dp"
-            android:layout_height="24dp"
-            android:layout_alignParentBottom="true"
-            android:layout_marginBottom="16dp"
-            android:layout_marginLeft="14dp"
-            android:layout_marginStart="14dp"
-            android:src="@drawable/ic_drawer_setting" />
-
-        <ImageView
-            android:id="@+id/iv_drawer_bottom_logo"
-            android:layout_width="44dp"
-            android:layout_height="44dp"
-            android:layout_alignParentBottom="true"
-            android:layout_alignParentRight="true"
-            android:layout_alignParentEnd="true"
-            android:layout_marginBottom="10dp"
-            android:layout_marginRight="12dp"
-            android:layout_marginEnd="12dp"
-            android:src="@drawable/img_drawer_button_logo"/>
+        <View
+            android:layout_width="match_parent"
+            android:layout_height="3dp"
+            android:background="#E7E9F3"/>
 
         <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_alignParentBottom="true"
-            android:layout_marginBottom="18dp"
-            android:layout_marginLeft="12dp"
-            android:layout_marginStart="12dp"
-            android:layout_marginRight="12dp"
-            android:layout_marginEnd="12dp"
-            android:layout_toRightOf="@id/iv_drawer_setting"
-            android:layout_toEndOf="@id/iv_drawer_setting"
-            android:layout_toLeftOf="@id/iv_drawer_bottom_logo"
-            android:layout_toStartOf="@id/iv_drawer_bottom_logo"
-            android:text="@string/app_name"
-            android:textColor="@color/white"
+            android:layout_width="match_parent"
+            android:layout_height="50dp"
+            android:layout_marginLeft="20dp"
+            android:layout_marginStart="20dp"
+            android:gravity="center_vertical"
+            android:textColor="#66000000"
             android:textSize="16dp"
-            android:textStyle="bold"/>
+            android:text="@string/drawer_tools"/>
 
-    </RelativeLayout>
+        <TextView
+            android:id="@+id/tv_drawer_app_locker"
+            android:layout_width="match_parent"
+            android:layout_height="40dp"
+            android:layout_marginLeft="20dp"
+            android:layout_marginStart="20dp"
+            android:gravity="center_vertical"
+            android:drawableLeft="@drawable/ic_drawer_app_locker"
+            android:drawableStart="@drawable/ic_drawer_app_locker"
+            android:drawablePadding="15dp"
+            android:textColor="#B2000000"
+            android:textSize="15dp"
+            android:text="@string/drawer_app_locker"/>
 
-</LinearLayout>
+        <TextView
+            android:id="@+id/tv_drawer_smart_locker"
+            android:layout_width="match_parent"
+            android:layout_height="40dp"
+            android:layout_marginLeft="20dp"
+            android:layout_marginStart="20dp"
+            android:gravity="center_vertical"
+            android:drawableLeft="@drawable/ic_drawer_smart_locker"
+            android:drawableStart="@drawable/ic_drawer_smart_locker"
+            android:drawablePadding="15dp"
+            android:textColor="#B2000000"
+            android:textSize="15dp"
+            android:text="@string/drawer_smart_locker"/>
+
+        <TextView
+            android:id="@+id/tv_drawer_smart_charge"
+            android:layout_width="match_parent"
+            android:layout_height="40dp"
+            android:layout_marginLeft="20dp"
+            android:layout_marginStart="20dp"
+            android:gravity="center_vertical"
+            android:drawableLeft="@drawable/ic_drawer_smart_charge"
+            android:drawableStart="@drawable/ic_drawer_smart_charge"
+            android:drawablePadding="15dp"
+            android:textColor="#B2000000"
+            android:textSize="15dp"
+            android:text="@string/drawer_smart_charge"/>
+
+        <View
+            android:layout_width="match_parent"
+            android:layout_height="3dp"
+            android:background="#E7E9F3"/>
+
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="50dp"
+            android:layout_marginLeft="20dp"
+            android:layout_marginStart="20dp"
+            android:gravity="center_vertical"
+            android:textColor="#66000000"
+            android:textSize="16dp"
+            android:text="@string/drawer_setting"/>
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="40dp"
+            android:orientation="horizontal">
+
+            <TextView
+                android:id="@+id/tv_drawer_usb_plugin"
+                android:layout_width="0dp"
+                android:layout_height="match_parent"
+                android:layout_weight="1"
+                android:layout_marginLeft="20dp"
+                android:layout_marginStart="20dp"
+                android:gravity="center_vertical"
+                android:drawableLeft="@drawable/ic_drawer_usb"
+                android:drawableStart="@drawable/ic_drawer_usb"
+                android:drawablePadding="15dp"
+                android:textColor="#B2000000"
+                android:textSize="15dp"
+                android:text="@string/drawer_usb_plugin_message"/>
+
+            <ImageView
+                android:layout_width="wrap_content"
+                android:layout_height="match_parent"
+                android:src="@drawable/drawer_setting_switcher_selector"/>
+
+        </LinearLayout>
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="40dp"
+            android:orientation="horizontal">
+
+            <TextView
+                android:id="@+id/tv_drawer_low_space"
+                android:layout_width="0dp"
+                android:layout_height="match_parent"
+                android:layout_weight="1"
+                android:layout_marginLeft="20dp"
+                android:layout_marginStart="20dp"
+                android:gravity="center_vertical"
+                android:drawableLeft="@drawable/ic_drawer_low_space"
+                android:drawableStart="@drawable/ic_drawer_low_space"
+                android:drawablePadding="15dp"
+                android:textColor="#B2000000"
+                android:textSize="15dp"
+                android:text="@string/drawer_low_space_warning"/>
+
+            <ImageView
+                android:layout_width="wrap_content"
+                android:layout_height="match_parent"
+                android:src="@drawable/drawer_setting_switcher_selector"/>
+
+        </LinearLayout>
+
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="40dp"
+            android:orientation="horizontal">
+
+            <TextView
+                android:id="@+id/tv_drawer_logger_notification"
+                android:layout_width="0dp"
+                android:layout_height="match_parent"
+                android:layout_weight="1"
+                android:layout_marginLeft="20dp"
+                android:layout_marginStart="20dp"
+                android:gravity="center_vertical"
+                android:drawableLeft="@drawable/ic_drawer_logger"
+                android:drawableStart="@drawable/ic_drawer_logger"
+                android:drawablePadding="15dp"
+                android:textColor="#B2000000"
+                android:textSize="15dp"
+                android:text="@string/drawer_logger_notification"/>
+
+            <ImageView
+                android:layout_width="wrap_content"
+                android:layout_height="match_parent"
+                android:src="@drawable/drawer_setting_switcher_selector"/>
+
+        </LinearLayout>
+
+
+        <View
+            android:layout_width="match_parent"
+            android:layout_height="3dp"
+            android:background="#E7E9F3"/>
+
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="50dp"
+            android:layout_marginLeft="20dp"
+            android:layout_marginStart="20dp"
+            android:gravity="center_vertical"
+            android:textColor="#66000000"
+            android:textSize="16dp"
+            android:text="@string/drawer_other"/>
+
+        <TextView
+            android:id="@+id/tv_drawer_rating"
+            android:layout_width="match_parent"
+            android:layout_height="40dp"
+            android:layout_marginLeft="20dp"
+            android:layout_marginStart="20dp"
+            android:gravity="center_vertical"
+            android:drawableLeft="@drawable/ic_drawer_rating"
+            android:drawableStart="@drawable/ic_drawer_rating"
+            android:drawablePadding="15dp"
+            android:textColor="#B2000000"
+            android:textSize="15dp"
+            android:text="@string/drawer_rating"/>
+
+        <TextView
+            android:id="@+id/tv_drawer_update"
+            android:layout_width="match_parent"
+            android:layout_height="40dp"
+            android:layout_marginLeft="20dp"
+            android:layout_marginStart="20dp"
+            android:gravity="center_vertical"
+            android:drawableLeft="@drawable/ic_drawer_update"
+            android:drawableStart="@drawable/ic_drawer_update"
+            android:drawablePadding="15dp"
+            android:textColor="#B2000000"
+            android:textSize="15dp"
+            android:text="@string/drawer_update"/>
+
+        <TextView
+            android:id="@+id/tv_drawer_help"
+            android:layout_width="match_parent"
+            android:layout_height="40dp"
+            android:layout_marginLeft="20dp"
+            android:layout_marginStart="20dp"
+            android:gravity="center_vertical"
+            android:drawableLeft="@drawable/ic_drawer_help"
+            android:drawableStart="@drawable/ic_drawer_help"
+            android:drawablePadding="15dp"
+            android:textColor="#B2000000"
+            android:textSize="15dp"
+            android:text="@string/drawer_help"/>
+
+        <TextView
+            android:id="@+id/tv_drawer_about"
+            android:layout_width="match_parent"
+            android:layout_height="40dp"
+            android:layout_marginLeft="20dp"
+            android:layout_marginStart="20dp"
+            android:gravity="center_vertical"
+            android:drawableLeft="@drawable/ic_drawer_about"
+            android:drawableStart="@drawable/ic_drawer_about"
+            android:drawablePadding="15dp"
+            android:textColor="#B2000000"
+            android:textSize="15dp"
+            android:text="@string/drawer_about"/>
+
+    </LinearLayout>
+
+</ScrollView>
