--- a/app/src/main/res/layout/dialog_extract_error.xml
+++ b/app/src/main/res/layout/dialog_extract_error.xml
@@ -1,58 +1,71 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-                android:layout_width="320dp"
-                android:layout_height="182dp"
-                android:background="@drawable/white_2_dp_corner_bg"
-                android:orientation="vertical">
 
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginLeft="24dp"
-        android:layout_marginStart="24dp"
-        android:layout_marginTop="21dp"
-        android:text="@string/extract_failed"
-        android:textColor="#ff8181"
-        android:textSize="20dp"
-        android:textStyle="bold"/>
+<FrameLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    android:layout_width="match_parent"
+    android:layout_height="wrap_content"
+    android:background="@drawable/bg_dialog">
 
-    <TextView
-        android:id="@+id/dialog_extract_error_file_path"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginEnd="24dp"
-        android:layout_marginLeft="24dp"
-        android:layout_marginRight="24dp"
-        android:layout_marginStart="24dp"
-        android:layout_marginTop="69dp"
-        android:textColor="@color/black_70"
-        android:textSize="16dp"/>
+    <RelativeLayout
+        android:layout_width="match_parent"
+        android:layout_height="182dp"
+        android:layout_marginBottom="20dp"
+        android:layout_marginEnd="20dp"
+        android:layout_marginLeft="20dp"
+        android:layout_marginRight="20dp"
+        android:layout_marginStart="20dp"
+        android:layout_marginTop="12dp"
+        android:background="@drawable/white_2_dp_corner_bg">
 
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginEnd="24dp"
-        android:layout_marginLeft="24dp"
-        android:layout_marginRight="24dp"
-        android:layout_marginStart="24dp"
-        android:layout_marginTop="96dp"
-        android:text="@string/please_retry_or_cancel"
-        android:textColor="@color/black_70"
-        android:textSize="16dp"/>
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginLeft="24dp"
+            android:layout_marginStart="24dp"
+            android:layout_marginTop="21dp"
+            android:text="@string/extract_failed"
+            android:textColor="#ff8181"
+            android:textSize="20dp"
+            android:textStyle="bold"/>
 
-    <TextView
-        android:id="@+id/dialog_extract_error_ok_btn"
-        android:layout_width="80dp"
-        android:layout_height="36dp"
-        android:layout_alignParentBottom="true"
-        android:layout_alignParentEnd="true"
-        android:layout_alignParentRight="true"
-        android:layout_marginBottom="8dp"
-        android:layout_marginEnd="8dp"
-        android:layout_marginRight="8dp"
-        android:gravity="center"
-        android:text="@string/common_ok"
-        android:textColor="@color/tv_back_black_text_selector"
-        android:textSize="16dp"
-        android:textStyle="bold"/>
-</RelativeLayout>
+        <TextView
+            android:id="@+id/dialog_extract_error_file_path"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginEnd="24dp"
+            android:layout_marginLeft="24dp"
+            android:layout_marginRight="24dp"
+            android:layout_marginStart="24dp"
+            android:layout_marginTop="69dp"
+            android:textColor="@color/black_70"
+            android:textSize="16dp"/>
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginEnd="24dp"
+            android:layout_marginLeft="24dp"
+            android:layout_marginRight="24dp"
+            android:layout_marginStart="24dp"
+            android:layout_marginTop="96dp"
+            android:text="@string/please_retry_or_cancel"
+            android:textColor="@color/black_70"
+            android:textSize="16dp"/>
+
+        <TextView
+            android:id="@+id/dialog_extract_error_ok_btn"
+            android:layout_width="80dp"
+            android:layout_height="36dp"
+            android:layout_alignParentBottom="true"
+            android:layout_alignParentEnd="true"
+            android:layout_alignParentRight="true"
+            android:layout_marginBottom="8dp"
+            android:layout_marginEnd="8dp"
+            android:layout_marginRight="8dp"
+            android:gravity="center"
+            android:text="@string/common_ok"
+            android:textColor="@color/tv_back_black_text_selector"
+            android:textSize="16dp"
+            android:textStyle="bold"/>
+    </RelativeLayout>
+</FrameLayout>
