--- a/app/src/main/res/layout/dialog_zip_pass_input.xml
+++ b/app/src/main/res/layout/dialog_zip_pass_input.xml
@@ -1,117 +1,129 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-                android:layout_width="320dp"
-                android:layout_height="244dp"
-                android:background="@drawable/white_2_dp_corner_bg"
-                android:orientation="vertical">
+<FrameLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    android:layout_width="match_parent"
+    android:layout_height="wrap_content"
+    android:background="@drawable/bg_dialog">
 
-    <TextView
-        android:id="@+id/dialog_pass_in_title"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginLeft="24dp"
-        android:layout_marginStart="24dp"
-        android:layout_marginTop="21dp"
-        android:text="@string/password_required"
-        android:textColor="#b3000000"
-        android:textSize="20dp"
-        android:textStyle="bold"/>
-
-    <TextView
-        android:id="@+id/dialog_pass_in_wrong_tip"
+    <RelativeLayout
         android:layout_width="match_parent"
-        android:layout_height="24dp"
-        android:layout_marginLeft="24dp"
-        android:layout_marginStart="24dp"
-        android:layout_marginRight="24dp"
-        android:layout_marginEnd="24dp"
-        android:paddingLeft="8dp"
-        android:layout_marginTop="21dp"
-        android:background="@drawable/red_2_dp_corner_bg"
-        android:gravity="center_vertical"
-        android:text="@string/invalid_password"
-        android:textColor="@android:color/white"
-        android:textSize="12dp"
-        android:visibility="gone"/>
+        android:layout_height="244dp"
+        android:layout_marginBottom="20dp"
+        android:layout_marginEnd="20dp"
+        android:layout_marginLeft="20dp"
+        android:layout_marginRight="20dp"
+        android:layout_marginStart="20dp"
+        android:layout_marginTop="12dp"
+        android:background="@drawable/white_2_dp_corner_bg">
 
-    <TextView
-        android:id="@+id/dialog_pass_in_des"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginEnd="24dp"
-        android:layout_marginLeft="24dp"
-        android:layout_marginRight="24dp"
-        android:layout_marginStart="24dp"
-        android:layout_marginTop="69dp"
-        android:text="@string/enter_password_to_access"
-        android:textColor="#b3000000"
-        android:textSize="14dp"/>
+        <TextView
+            android:id="@+id/dialog_pass_in_title"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginLeft="24dp"
+            android:layout_marginStart="24dp"
+            android:layout_marginTop="21dp"
+            android:text="@string/password_required"
+            android:textColor="#b3000000"
+            android:textSize="20dp"
+            android:textStyle="bold"/>
 
-    <EditText
-        android:id="@+id/dialog_zip_pass_in_et"
-        android:layout_width="match_parent"
-        android:layout_height="40dp"
-        android:layout_marginEnd="24dp"
-        android:layout_marginLeft="24dp"
-        android:layout_marginRight="24dp"
-        android:layout_marginStart="24dp"
-        android:layout_marginTop="113dp"
-        android:gravity="center_vertical"
-        android:hint="@string/enter_password"
-        android:inputType="textPassword"
-        android:singleLine="true"
-        android:textColor="#b3000000"/>
+        <TextView
+            android:id="@+id/dialog_pass_in_wrong_tip"
+            android:layout_width="match_parent"
+            android:layout_height="24dp"
+            android:layout_marginEnd="24dp"
+            android:layout_marginLeft="24dp"
+            android:layout_marginRight="24dp"
+            android:layout_marginStart="24dp"
+            android:layout_marginTop="21dp"
+            android:background="@drawable/red_2_dp_corner_bg"
+            android:gravity="center_vertical"
+            android:paddingLeft="8dp"
+            android:text="@string/invalid_password"
+            android:textColor="@android:color/white"
+            android:textSize="12dp"
+            android:visibility="gone"/>
 
-    <ImageView
-        android:id="@+id/show_pass_btn"
-        android:layout_width="16dp"
-        android:layout_height="16dp"
-        android:layout_marginLeft="24dp"
-        android:layout_marginStart="24dp"
-        android:src="@drawable/select_none"
-        android:layout_marginTop="161dp"
-        android:contentDescription="@null"/>
+        <TextView
+            android:id="@+id/dialog_pass_in_des"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginEnd="24dp"
+            android:layout_marginLeft="24dp"
+            android:layout_marginRight="24dp"
+            android:layout_marginStart="24dp"
+            android:layout_marginTop="69dp"
+            android:text="@string/enter_password_to_access"
+            android:textColor="#b3000000"
+            android:textSize="14dp"/>
 
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginLeft="50dp"
-        android:layout_marginStart="50dp"
-        android:layout_marginTop="161dp"
-        android:drawablePadding="10dp"
-        android:text="@string/show_password"
-        android:textColor="#b3000000"
-        android:textSize="12dp"/>
+        <EditText
+            android:id="@+id/dialog_zip_pass_in_et"
+            android:layout_width="match_parent"
+            android:layout_height="40dp"
+            android:layout_marginEnd="24dp"
+            android:layout_marginLeft="24dp"
+            android:layout_marginRight="24dp"
+            android:layout_marginStart="24dp"
+            android:layout_marginTop="113dp"
+            android:gravity="center_vertical"
+            android:hint="@string/enter_password"
+            android:inputType="textPassword"
+            android:singleLine="true"
+            android:textColor="#b3000000"/>
 
-    <TextView
-        android:id="@+id/dialog_zip_pass_in_ok"
-        android:layout_width="80dp"
-        android:layout_height="36dp"
-        android:layout_alignParentBottom="true"
-        android:layout_alignParentEnd="true"
-        android:layout_alignParentRight="true"
-        android:layout_marginBottom="8dp"
-        android:layout_marginEnd="8dp"
-        android:layout_marginRight="8dp"
-        android:gravity="center"
-        android:text="@string/common_ok"
-        android:textColor="@color/green_text_color_selector"
-        android:textSize="16dp"
-        android:textStyle="bold"/>
+        <ImageView
+            android:id="@+id/show_pass_btn"
+            android:layout_width="16dp"
+            android:layout_height="16dp"
+            android:layout_marginLeft="24dp"
+            android:layout_marginStart="24dp"
+            android:layout_marginTop="161dp"
+            android:contentDescription="@null"
+            android:src="@drawable/select_none"/>
 
-    <TextView
-        android:id="@+id/dialog_zip_pass_in_cancel"
-        android:layout_width="80dp"
-        android:layout_height="36dp"
-        android:layout_alignParentBottom="true"
-        android:layout_alignParentEnd="true"
-        android:layout_alignParentRight="true"
-        android:layout_marginBottom="8dp"
-        android:layout_marginEnd="96dp"
-        android:layout_marginRight="96dp"
-        android:gravity="center"
-        android:text="@string/common_cancel"
-        android:textColor="@color/tv_back_black_text_selector"
-        android:textSize="20dp"
-        android:textStyle="bold"/>
-</RelativeLayout>
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginLeft="50dp"
+            android:layout_marginStart="50dp"
+            android:layout_marginTop="161dp"
+            android:drawablePadding="10dp"
+            android:text="@string/show_password"
+            android:textColor="#b3000000"
+            android:textSize="12dp"/>
+
+        <TextView
+            android:id="@+id/dialog_zip_pass_in_ok"
+            android:layout_width="80dp"
+            android:layout_height="36dp"
+            android:layout_alignParentBottom="true"
+            android:layout_alignParentEnd="true"
+            android:layout_alignParentRight="true"
+            android:layout_marginBottom="8dp"
+            android:layout_marginEnd="8dp"
+            android:layout_marginRight="8dp"
+            android:gravity="center"
+            android:text="@string/common_ok"
+            android:textColor="@color/green_text_color_selector"
+            android:textSize="16dp"
+            android:textStyle="bold"/>
+
+        <TextView
+            android:id="@+id/dialog_zip_pass_in_cancel"
+            android:layout_width="80dp"
+            android:layout_height="36dp"
+            android:layout_alignParentBottom="true"
+            android:layout_alignParentEnd="true"
+            android:layout_alignParentRight="true"
+            android:layout_marginBottom="8dp"
+            android:layout_marginEnd="96dp"
+            android:layout_marginRight="96dp"
+            android:gravity="center"
+            android:text="@string/common_cancel"
+            android:textColor="@color/tv_back_black_text_selector"
+            android:textSize="20dp"
+            android:textStyle="bold"/>
+    </RelativeLayout>
+</FrameLayout>
