--- a/app/src/main/res/layout/view_extract_progress.xml
+++ b/app/src/main/res/layout/view_extract_progress.xml
@@ -2,71 +2,83 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                android:background="#33000000">
+                android:background="#88000000">
 
-    <RelativeLayout
-        android:layout_width="320dp"
-        android:layout_height="142dp"
+    <FrameLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
         android:layout_centerInParent="true"
-        android:background="@drawable/white_2_dp_corner_bg">
+        android:background="@drawable/bg_dialog">
 
-        <TextView
-            android:id="@+id/view_extract_title"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginLeft="24dp"
-            android:layout_marginStart="24dp"
-            android:layout_marginTop="21dp"
-            android:text="@string/extracting"
-            android:textColor="@android:color/black"
-            android:textSize="20dp"
-            android:textStyle="bold"/>
-
-        <ProgressBar
-            android:id="@+id/extract_dialog_progress"
-            style="@android:style/Widget.ProgressBar.Horizontal"
+        <RelativeLayout
             android:layout_width="match_parent"
-            android:layout_height="6dp"
-            android:layout_marginEnd="24dp"
-            android:layout_marginLeft="24dp"
-            android:layout_marginRight="24dp"
-            android:layout_marginStart="24dp"
-            android:layout_marginTop="69dp"
-            android:indeterminate="false"
-            android:indeterminateDrawable="@drawable/extract_noti_progress_bg"
-            android:max="100"
-            android:progressDrawable="@drawable/extract_noti_progress_bg"/>
+            android:layout_height="142dp"
+            android:layout_gravity="center"
+            android:layout_marginBottom="20dp"
+            android:layout_marginEnd="20dp"
+            android:layout_marginLeft="20dp"
+            android:layout_marginRight="20dp"
+            android:layout_marginStart="20dp"
+            android:layout_marginTop="12dp"
+            android:background="@drawable/white_2_dp_corner_bg">
 
-        <TextView
-            android:id="@+id/view_extract_background_handle"
-            android:layout_width="192dp"
-            android:layout_height="36dp"
-            android:layout_alignParentBottom="true"
-            android:layout_alignParentEnd="true"
-            android:layout_alignParentRight="true"
-            android:layout_marginBottom="8dp"
-            android:layout_marginEnd="8dp"
-            android:layout_marginRight="8dp"
-            android:layout_marginTop="20dp"
-            android:gravity="center"
-            android:text="@string/extract_in_background"
-            android:textColor="@color/green_text_color_selector"
-            android:textSize="16dp"
-            android:textStyle="bold"/>
+            <TextView
+                android:id="@+id/view_extract_title"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginLeft="24dp"
+                android:layout_marginStart="24dp"
+                android:layout_marginTop="21dp"
+                android:text="@string/extracting"
+                android:textColor="@android:color/black"
+                android:textSize="20dp"
+                android:textStyle="bold"/>
 
-        <TextView
-            android:id="@+id/view_extract_cancel"
-            android:layout_width="80dp"
-            android:layout_height="36dp"
-            android:layout_alignParentBottom="true"
-            android:layout_alignParentRight="true"
-            android:layout_marginBottom="8dp"
-            android:layout_marginRight="200dp"
-            android:gravity="center"
-            android:text="@string/common_cancel"
-            android:textColor="@color/tv_back_black_text_selector"
-            android:textSize="16dp"
-            android:textStyle="bold"/>
-    </RelativeLayout>
+            <ProgressBar
+                android:id="@+id/extract_dialog_progress"
+                style="@android:style/Widget.ProgressBar.Horizontal"
+                android:layout_width="match_parent"
+                android:layout_height="6dp"
+                android:layout_marginEnd="24dp"
+                android:layout_marginLeft="24dp"
+                android:layout_marginRight="24dp"
+                android:layout_marginStart="24dp"
+                android:layout_marginTop="69dp"
+                android:indeterminate="false"
+                android:indeterminateDrawable="@drawable/extract_noti_progress_bg"
+                android:max="100"
+                android:progressDrawable="@drawable/extract_noti_progress_bg"/>
 
+            <TextView
+                android:id="@+id/view_extract_background_handle"
+                android:layout_width="192dp"
+                android:layout_height="36dp"
+                android:layout_alignParentBottom="true"
+                android:layout_alignParentEnd="true"
+                android:layout_alignParentRight="true"
+                android:layout_marginBottom="8dp"
+                android:layout_marginEnd="8dp"
+                android:layout_marginRight="8dp"
+                android:layout_marginTop="20dp"
+                android:gravity="center"
+                android:text="@string/extract_in_background"
+                android:textColor="@color/green_text_color_selector"
+                android:textSize="16dp"
+                android:textStyle="bold"/>
+
+            <TextView
+                android:id="@+id/view_extract_cancel"
+                android:layout_width="80dp"
+                android:layout_height="36dp"
+                android:layout_alignParentBottom="true"
+                android:layout_alignParentRight="true"
+                android:layout_marginBottom="8dp"
+                android:layout_marginRight="200dp"
+                android:gravity="center"
+                android:text="@string/common_cancel"
+                android:textColor="@color/tv_back_black_text_selector"
+                android:textSize="16dp"
+                android:textStyle="bold"/>
+        </RelativeLayout>
+    </FrameLayout>
 </RelativeLayout>
