--- a/app/src/main/res/layout/fragment_main_storage.xml
+++ b/app/src/main/res/layout/fragment_main_storage.xml
@@ -12,6 +12,17 @@
         android:orientation="horizontal"
         android:background="#FFFFFF" >
 
+        <ImageView
+            android:id="@+id/iv_main_storage_disk"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginLeft="16dp"
+            android:layout_marginStart="16dp"
+            android:layout_marginRight="6dp"
+            android:layout_marginEnd="6dp"
+            android:layout_gravity="center_vertical"
+            android:src="@drawable/img_phone_storage" />
+
         <com.jb.filemanager.ui.widget.HorizontalListView
             android:id="@+id/lv_dirs"
             android:layout_width="0dp"
@@ -30,6 +41,11 @@
             android:src="@drawable/main_storage_style_switch_selector" />
 
     </LinearLayout>
+
+    <View
+        android:layout_width="match_parent"
+        android:layout_height="1dp"
+        android:background="#E7E9F3"/>
 
     <FrameLayout
         android:layout_width="match_parent"
